# FaceSDK-Minimal

./: CMakeLists.txt  CMakeSettings.json  README.md
config/: config.json
include/: Database.h
src/: Database.cpp  fsdk-minimal.cpp
